--- a/index.ipynb
+++ b/index.ipynb
@@ -94,14 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1000\n",
       "1000\n"
      ]
     }
@@ -110,7 +118,8 @@
     "# Create a list (data) as data = [1,2,3..,1000]\n",
     "\n",
     "# Code here \n",
-    "\n"
+    "data = np.arange(1, 1001)\n",
+    "print(data.size)"
    ]
   },
   {
@@ -162,13 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import spark and initiate a local SparkContext (execute only once)\n",
-    "\n",
-    "# Code here \n"
+    "import pyspark\n",
+    "# Code here \n",
+    "sc = pyspark.SparkConf()"
    ]
   },
   {
@@ -485,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
